# ggterm

./: .gitignore  Cargo.bundle.toml  Cargo.toml  GGCODE.md  Makefile  README.md  config.example.toml
.cargo/: config.toml
.ggcode/: agent-rules.json  skill-scenarios.jsonl  skill-usage.json  todos.json
.ggcode/instances/: 35377-e3e72f29.json  40395-fa7491d4.json  40781-652de15f.json  48702-30accf39.json  5141-3fa84060.json  5141-9f0c7fc0.json  54324-c3809fad.json  60466-912e76aa.json
.ggcode/memory/: ggterm-cicd-status.md  ggterm-ggcode-md.md  ggterm-mobile-ffi-status.md  ggterm-p10-status.md  ggterm-p10a-status.md  ggterm-p10b-status.md  ggterm-p10c-status.md  ggterm-p10d-status.md  ggterm-p11-status.md  ggterm-p12-status.md  ggterm-p13-status.md  ggterm-p14-status.md  ggterm-p15-status.md  ggterm-p15b-status.md  ggterm-p16-status.md  ggterm-p16b-status.md  ggterm-p17-status.md  ggterm-p18-status.md  ggterm-p19-status.md  ggterm-p20-status.md  ggterm-p20a-status.md  ggterm-p21-status.md  ggterm-p22-status.md  ggterm-p23-status.md  ggterm-p24-status.md  ggterm-p25-status.md  ggterm-p26-status.md  ggterm-p27-status.md  ggterm-p28-status.md  ggterm-p29-status.md  ggterm-p2p-design.md  ggterm-p2p-phase3-status.md  ggterm-p30-status.md  ggterm-p31-status.md  ggterm-p32-status.md  ggterm-p33-status.md  ggterm-p34-status.md  ggterm-p35-status.md  ggterm-p36-status.md  ggterm-p37-status.md  (+22 more)
.ggcode/worktrees/p2-2-csi/: README.md
.github/workflows/: ci.yml  release-desktop.yml  release-mobile.yml
assets/: Info.plist  ggterm.desktop  logo.icns
crates/ggterm-ai/: Cargo.toml
crates/ggterm-ai/src/: client.rs  context.rs  engine.rs  lib.rs  prompt.rs  tools.rs
crates/ggterm-app/: Cargo.toml  build.rs
crates/ggterm-app/examples/: config.toml  config_example.rs
crates/ggterm-app/src/: about_dialog.rs  ai_bridge.rs  ai_overlay.rs  animations.rs  app.rs  broadcast_input.rs  clipboard.rs  color_picker.rs  command_history.rs  command_nav.rs  command_palette.rs  config.rs  connection_manager.rs  context_menu.rs  cursor_blink.rs  desktop_config.rs  event.rs  file_preview.rs  font.rs  gpu.rs  input.rs  keymap.rs  lib.rs  menu_bar.rs  mouse.rs  native_menu.rs  new_tab_menu.rs  p2p_share.rs  perf_monitor.rs  plugin_integration.rs  resize.rs  search.rs  session.rs  settings_ui.rs  settings_window.rs  shell_integration.rs  shell_switcher.rs  shortcut_help.rs  smooth_scroll.rs  snippets.rs  (+15 more)
crates/ggterm-app/src/window/: actions.rs  handlers.rs  mod.rs  render.rs
crates/ggterm-app/tests/: d3_command_dispatch_test.rs  plugin_integration_test.rs
crates/ggterm-core/: Cargo.toml
crates/ggterm-core/src/: lib.rs  recording.rs  transport.rs
crates/ggterm-core/src/grid/: cell.rs  damage.rs  mod.rs  row.rs
crates/ggterm-core/src/pty/: mod.rs
crates/ggterm-core/src/term/: mod.rs
crates/ggterm-core/src/vte/: mod.rs  parser.rs  perform.rs  vte_tests.rs
crates/ggterm-core/tests/: grid_edits.rs  grid_model.rs  vte_parser.rs
crates/ggterm-ffi/: Cargo.toml  flutter_rust_bridge.yaml
crates/ggterm-ffi/src/: api.rs  lib.rs  local_shell.rs  p2p.rs  p2p_stubs.rs  transport.rs
crates/ggterm-p2p/: Cargo.toml
crates/ggterm-p2p/src/: client.rs  error.rs  host.rs  lib.rs  ticket.rs  transport.rs
crates/ggterm-plugin/: Cargo.toml
crates/ggterm-plugin/src/: config.rs  hooks.rs  lib.rs  lua.rs  manager.rs  plugin.rs  wasm.rs
crates/ggterm-render/: Cargo.toml
crates/ggterm-render-wgpu/: Cargo.toml
crates/ggterm-render-wgpu/benches/: converter.rs  converter_bench.rs
crates/ggterm-render-wgpu/shaders/: ui.wgsl  underline.wgsl
crates/ggterm-render-wgpu/src/: colors.rs  converter.rs  lib.rs
crates/ggterm-render/src/: console.rs  lib.rs  theme.rs
crates/ggterm-render/tests/: console_test.rs
crates/ggterm-ssh/: Cargo.toml
crates/ggterm-ssh/src/: error.rs  lib.rs
docs/: README.md  command-nav.md  config.md  phase2-design.md  phase4-design.md  phase5-design.md
docs/en/: architecture.md  developer-guide.md  user-manual.md
docs/en/user-guide/: 01-getting-started.md  02-tabs-panes.md  03-text-operations.md  04-appearance.md  05-advanced-features.md  06-command-palette.md  07-p2p-mobile.md  08-config-troubleshooting.md
docs/es/: architecture.md  developer-guide.md
docs/es/user-guide/: 01-getting-started.md  02-tabs-panes.md  03-text-operations.md  04-appearance.md  05-advanced-features.md  06-command-palette.md  07-p2p-mobile.md  08-config-troubleshooting.md
docs/ja/: architecture.md  developer-guide.md
docs/ja/user-guide/: 01-getting-started.md  02-tabs-panes.md  03-text-operations.md  04-appearance.md  05-advanced-features.md  06-command-palette.md  07-p2p-mobile.md  08-config-troubleshooting.md
docs/ko/: architecture.md  developer-guide.md
docs/ko/user-guide/: 01-getting-started.md  02-tabs-panes.md  03-text-operations.md  04-appearance.md  05-advanced-features.md  06-command-palette.md  07-p2p-mobile.md  08-config-troubleshooting.md
docs/zh/: architecture.md  developer-guide.md  user-manual.md
docs/zh/user-guide/: 01-getting-started.md  02-tabs-panes.md  03-text-operations.md  04-appearance.md  05-advanced-features.md  06-command-palette.md  07-p2p-mobile.md  08-config-troubleshooting.md
examples/plugins/: hello.lua
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts  proguard-rules.pro
mobile/ios/: build_rust_ios.sh
mobile/ios/Flutter/: Debug.xcconfig  Release.xcconfig
mobile/ios/Runner/: AppDelegate.swift  Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/ios/RustLib/: ggterm_ffi.h  ggterm_ffi.modulemap
mobile/lib/: ai_toolbar.dart  connection_screen.dart  keyboard_bar.dart  main.dart  selection_overlay.dart  terminal_screen.dart  theme.dart
mobile/lib/ffi/: ffi_bindings.dart  p2p_bindings.dart  session_manager.dart  types.dart
mobile/lib/screens/: qr_scan_screen.dart  share_screen.dart
mobile/test/: widget_test.dart
scripts/: pre-push.sh
scripts/release/: build-android-ffi.sh  build-ios-ffi.sh  build-macos-app.sh
shell/: README.md  bash.sh  fish.fish  zsh.zsh
(+7 files in other folders)
