[workspace]
members = [
    "crates/ggterm-ai",
    "crates/ggterm-core",
    "crates/ggterm-render",
    "crates/ggterm-render-wgpu",
    "crates/ggterm-app",
    "crates/ggterm-plugin",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["GGTerm Contributors"]
repository = "https://github.com/topcheer/ggterm"
version = "0.1.0"

[workspace.dependencies]
# Core dependencies shared across crates
bitflags = "2"
parking_lot = "0.12"
log = "0.4"
unicode-width = "0.2"
portable-pty = "0.9"

# GPU / windowing (used by render-wgpu and desktop feature)
wgpu = "29"
glyphon = "0.11"
winit = "0.30"
pollster = "0.4"
raw-window-handle = "0.6"
env_logger = "0.11"

# Internal crates
ggterm-ai = { path = "crates/ggterm-ai" }
ggterm-core = { path = "crates/ggterm-core" }
ggterm-render = { path = "crates/ggterm-render" }
ggterm-render-wgpu = { path = "crates/ggterm-render-wgpu" }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# File system watching
notify = "8"

# Error handling
thiserror = "2"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# macOS native APIs (objc2)
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = ["NSObject", "NSString", "NSValue"] }
objc2-app-kit = { version = "0.3", features = ["NSMenu", "NSMenuItem", "NSApplication", "NSEvent", "NSResponder"] }
cocoa = "0.26"
objc = "2.0"

# Profile: optimize for speed even in dev for terminal performance
[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
strip = true
