[package]
name = "ggterm-ai"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ggterm-core.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log.workspace = true
thiserror.workspace = true

# HTTP client (optional — only needed for live LLM calls)
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }

[features]
default = ["http"]
http = ["dep:reqwest"]
ai = ["http"]

[dev-dependencies]
