[package]
name = "ggterm-app"
description = "Desktop terminal application: winit event loop + PTY I/O + renderer"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
version.workspace = true

[features]
# Desktop mode: enables winit window + wgpu GPU rendering
# Without this feature, the crate is headless/test-only (ConsoleRenderer).
desktop = [
    "dep:winit",
    "dep:wgpu",
    "dep:ggterm-render-wgpu",
    "dep:pollster",
    "dep:portable-pty",
    "dep:raw-window-handle",
    "dep:env_logger",
    "dep:clap",
    "dep:objc2",
    "dep:objc2-foundation",
    "dep:objc2-app-kit",
]
# AI integration: enables ggterm-ai engine bridge
ai = ["dep:ggterm-ai"]
# Plugin system: enables ggterm-plugin manager and hook dispatch
plugin = ["dep:ggterm-plugin"]
# Lua plugin runtime (implies plugin)
plugin-lua = ["plugin", "ggterm-plugin?/lua"]
# WASM plugin runtime (implies plugin)
plugin-wasm = ["plugin", "ggterm-plugin?/wasm"]
# Config hot-reload via file system watching
config-watch = ["dep:notify"]

[dependencies]
ggterm-core = { path = "../ggterm-core" }
ggterm-render = { path = "../ggterm-render" }
ggterm-ai = { path = "../ggterm-ai", optional = true }
log.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true

# Desktop-only dependencies (optional — enabled by `desktop` feature)
winit = { workspace = true, optional = true }
objc2 = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
objc2-app-kit = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
ggterm-render-wgpu = { path = "../ggterm-render-wgpu", optional = true }
pollster = { workspace = true, optional = true }
portable-pty = { workspace = true, optional = true }
raw-window-handle = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
ggterm-plugin = { path = "../ggterm-plugin", optional = true }
notify = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

[dev-dependencies]
ggterm-plugin = { path = "../ggterm-plugin" }

[[bin]]
name = "ggterm"
required-features = ["desktop"]
