[package]
name = "ggterm-app"
description = "Desktop terminal application: winit event loop + PTY I/O + renderer"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
version.workspace = true

[features]
# Desktop mode: enables winit window + wgpu GPU rendering
# Without this feature, the crate is headless/test-only (ConsoleRenderer).
desktop = [
    "dep:winit",
    "dep:wgpu",
    "dep:ggterm-render-wgpu",
    "dep:pollster",
    "dep:portable-pty",
    "dep:raw-window-handle",
    "dep:env_logger",
    "dep:clap",
    "dep:objc2",
    "dep:objc2-foundation",
    "dep:objc2-app-kit",
    "dep:image",
]
# AI integration: enables ggterm-ai engine bridge
ai = ["dep:ggterm-ai", "ggterm-ai/http"]
# Plugin system: enables ggterm-plugin manager and hook dispatch
plugin = ["dep:ggterm-plugin"]
# Lua plugin runtime (implies plugin)
plugin-lua = ["plugin", "ggterm-plugin?/lua"]
# WASM plugin runtime (implies plugin)
plugin-wasm = ["plugin", "ggterm-plugin?/wasm"]
# Config hot-reload via file system watching
config-watch = ["dep:notify"]
# P2P terminal sharing (desktop shares to mobile via iroh/QUIC)
p2p = ["dep:ggterm-p2p", "dep:qrcode"]

[dependencies]
ggterm-core = { path = "../ggterm-core" }
ggterm-render = { path = "../ggterm-render" }
ggterm-ai = { path = "../ggterm-ai", optional = true }
log.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true

# Desktop-only dependencies (optional — enabled by `desktop` feature)
winit = { workspace = true, optional = true }
objc2 = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
objc2-app-kit = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
ggterm-render-wgpu = { path = "../ggterm-render-wgpu", optional = true }
pollster = { workspace = true, optional = true }
portable-pty = { workspace = true, optional = true }
raw-window-handle = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
ggterm-plugin = { path = "../ggterm-plugin", optional = true }
notify = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }

# P2P sharing (optional — enabled by `p2p` feature)
ggterm-p2p = { path = "../ggterm-p2p", optional = true }
qrcode = { version = "0.14", optional = true }

[dev-dependencies]
ggterm-plugin = { path = "../ggterm-plugin" }

[[bin]]
name = "ggterm"
required-features = ["desktop"]

# ── cargo-deb: Linux .deb packaging ───────────────────────────────────
# Install cargo-deb: cargo install cargo-deb
# Build .deb:       cargo deb --features "desktop ai plugin plugin-lua config-watch"
[package.metadata.deb]
maintainer = "GGTerm Contributors"
copyright = "2024, GGTerm Contributors"
license-file = ["../../LICENSE", "0"]
depends = "libxkbcommon0, libwayland-client0, libegl1, libx11-6"
section = "utils"
priority = "optional"
extended-description = """
GGTerm is a GPU-accelerated, AI-native terminal emulator built in Rust.
Features include multi-tab sessions, multi-pane splits, AI assistant,
scrollback search, 9 themes, configurable keybindings, and Lua/WASM plugins."""
assets = [
    ["target/release/ggterm", "usr/bin/", "755"],
    ["../../assets/ggterm.desktop", "usr/share/applications/", "644"],
    ["../../assets/logo-256.png", "usr/share/icons/hicolor/256x256/apps/ggterm.png", "644"],
    ["../../assets/logo-512.png", "usr/share/icons/hicolor/512x512/apps/ggterm.png", "644"],
]
