[package]
name = "ggterm-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "C-ABI FFI bindings for Flutter mobile integration"

[lib]
name = "ggterm_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
ggterm-core = { path = "../ggterm-core" }
log.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"

[features]
default = []
ssh = ["dep:ggterm-ssh"]
ai = ["dep:ggterm-ai"]
p2p = ["dep:ggterm-p2p"]

[dependencies.ggterm-ssh]
path = "../ggterm-ssh"
optional = true

[dependencies.ggterm-ai]
path = "../ggterm-ai"
optional = true

[dependencies.ggterm-p2p]
path = "../ggterm-p2p"
optional = true
