[package]
name = "ggterm-plugin"
version = "0.1.0"
edition = "2024"
description = "Plugin system for GGTerm terminal emulator"

[dependencies]
ggterm-core = { path = "../ggterm-core" }
log = "0.4"
thiserror.workspace = true

[features]
default = []
# Lua plugin runtime (mlua)
lua = ["dep:mlua"]
# WASM plugin runtime (wasmtime)
wasm = ["dep:wasmtime"]

[dependencies.mlua]
version = "0.10"
features = ["lua54", "vendored", "send"]
optional = true

[dependencies.wasmtime]
version = "29"
optional = true
default-features = false
features = [
    "cranelift",
    "runtime",
    "cache",
]

[dev-dependencies]
wat = "1"
