[package]
name = "ggterm-render-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ggterm-core = { path = "../ggterm-core" }
ggterm-render = { path = "../ggterm-render" }
glyphon = "0.11"
wgpu = { version = "29", features = ["metal"] }
thiserror.workspace = true

[dev-dependencies]
ggterm-core = { path = "../ggterm-core" }
ggterm-render = { path = "../ggterm-render" }
criterion = "0.5"

[[bench]]
name = "converter_bench"
harness = false
