[package]
name = "ggterm-ssh"
description = "SSH remote transport for ggterm terminal emulator"
edition.workspace = true
license.workspace = true

[dependencies]
ggterm-core = { path = "../ggterm-core" }
russh = "0.61"
tokio = { version = "1", features = ["full"] }
thiserror = { workspace = true }
log = { workspace = true }
